<resources>
    <string name="app_name">Fitness App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actionbar_title">Fitness App</string>
    <string name="members_report">Members Report</string>
    <string name="services">Services</string>
    <string name="reports">Reports</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="plans">Plans</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="diet_plan_for_cholesterol">Diet Plan For Cholesterol</string>
    <string name="hypothyroidism_program">Hypothyroidism Program</string>
    <string name="fat_loss_weight_loss">Fat Loss / Weight Loss</string>
    <string name="gym_body_building">Gym (Body Building)</string>
    <string name="body_toning">Body Toning</string>
    <string name="diabetes">Diabetes</string>
    <string name="member_registration">Member Registration</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="member_login">Member Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
</resources>