<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MemberLoginFragment"
    android:background="@color/primary_dark">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/amiko"
        android:text="@string/member_registration"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="40dp"
        app:layout_constraintVertical_bias="0">

        <EditText
            android:id="@+id/idEditTextNameField"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_rounded_corner_20"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="#888888"
            android:textCursorDrawable="@drawable/black_cursor"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="7dp"/>

        <EditText
            android:id="@+id/idEditTextEmailField"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_rounded_corner_20"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="#888888"
            android:textCursorDrawable="@drawable/black_cursor"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="7dp"/>

        <EditText
            android:id="@+id/idEditTextPasswordField"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_rounded_corner_20"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="#888888"
            android:textCursorDrawable="@drawable/black_cursor"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="7dp"/>
        <EditText
            android:id="@+id/idEditTextConfPasswordField"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_rounded_corner_20"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="#888888"
            android:textCursorDrawable="@drawable/black_cursor"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="7dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/idButtonSignUp"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_button_teal"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_rounded_corner_20"
            android:gravity="center"
            android:orientation="horizontal"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="16sp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/google"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_google"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginStart="25dp"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>