<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/primary">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actionbar_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/primary_dark"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="14dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/teal_200"
                        android:elevation="6dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_baseline_home_24"
                        android:tooltipText="Home"
                        app:borderWidth="0dp" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/id_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/primary"
                        android:elevation="6dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_baseline_account_circle_24"
                        android:tooltipText="@string/account"
                        app:borderWidth="0dp"
                        app:rippleColor="@color/teal_200" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/primary"
                        android:elevation="6dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_baseline_help_24"
                        android:tooltipText="@string/help"
                        app:borderWidth="0dp"
                        app:rippleColor="@color/teal_200" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/primary"
                        android:elevation="6dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_baseline_rate_review_24"
                        android:tooltipText="@string/reports"
                        app:borderWidth="0dp"
                        app:rippleColor="@color/teal_200" />
                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="12dp"
                android:src="@drawable/fitness" />
        </androidx.cardview.widget.CardView>

        <!--<androidx.viewpager.widget.ViewPager
            android:id="@+id/idViewPager2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/primary_dark"
                app:layout_constraintVertical_bias="0"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:text="@string/services"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:layout_marginEnd="10dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"

                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/primary_dark"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:text="@string/plans"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:layout_marginEnd="10dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/primary_dark"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:text="@string/members_report"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/idFragmentContainerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>